[package]
authors = ["Kurtis Dinelle <kurtisdinelle@gmail.com>"]
edition = "2021"
name = "stm32-nucleo-f411re-async"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.4"
heapless = { version = "0.8", default-features = false }

embassy-stm32 = { version = "0.1.0", features = ["defmt", "stm32f411re", "unstable-pac", "memory-x", "time-driver-any", "exti", "chrono"]  }
embassy-executor = { version = "0.5.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-sync = { version = "0.5.0", features = ["defmt"] }

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

tsl2591-rs = { path= "../.." }
