[package]
authors = ["Kurtis Dinelle <kurtisdinelle@gmail.com>"]
edition = "2021"
name = "stm32-nucleo-f411re"
version = "0.1.0"

[dependencies]
tsl2591-rs = { path= "../.." }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.4"
critical-section = "1.1.2"
panic-rtt-target = "0.1.3"
rtt-target = "0.5.0"
stm32f4xx-hal = { version = "0.20.0", features = ["stm32f411"] }
